/*
    MADE BY: AARON ZAJAC
    GITHUB: AARZAJ
    MAT: A01023376
*/

#include <iostream>
#include <string>

using namespace std;

class Cuadro{
private:
    string author;
    int year;
    float cost;
};

class Compra{
public:
    getCost(){
        return cost;
    }
};
